--- a/GestampPrueba2Back/appsettings.json
+++ b/GestampPrueba2Back/appsettings.json
@@ -9,5 +9,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Jwt": {
+        "Key": "sdfsdfsjdbf78sdyfssdfsdfbuidfs98gdfsdbf",
+        "Issuer": "http://localhost",
+        "Audience": "http://localhost:5000/usuarios"
     }
 }
