jwt funcionando en back

--- a/GestampPrueba2Back/appsettings.json
+++ b/GestampPrueba2Back/appsettings.json
@@ -12,7 +12,8 @@
     },
     "Jwt": {
         "Key": "sdfsdfsjdbf78sdyfssdfsdfbuidfs98gdfsdbf",
-        "Issuer": "http://localhost",
-        "Audience": "http://localhost:5000/usuarios"
+        "Issuer": "InventoryAuthenticationServer",
+        "Audience": "InventoryServicePostmanClient",
+        "Subject":  "InventoryServiceAccessToken"
     }
 }
