--- a/GestampPrueba2Front/angular.json
+++ b/GestampPrueba2Front/angular.json
@@ -39,6 +39,15 @@
                 "input": "node_modules/bootstrap/dist/css/bootstrap.min.css"
               },
               {
+                "input": "node_modules/primeicons/primeicons.css"
+              },
+              {
+                "input": "node_modules/primeng/resources/themes/nova-light/theme.css"
+              },
+              {
+                "input": "node_modules/primeng/resources/primeng.min.css"
+              },
+              {
                 "input": "src/global.scss"
               }
             ],
@@ -131,7 +140,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
@@ -177,7 +188,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ionic/angular-toolkit"
+    "defaultCollection": "@ionic/angular-toolkit",
+    "analytics": false
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
