--- a/GestampPrueba2Front/package.json
+++ b/GestampPrueba2Front/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.0.7",
+    "@angular/cdk": "^9.1.3",
     "@angular/common": "^9.0.7",
     "@angular/core": "^9.0.7",
     "@angular/forms": "^9.0.7",
@@ -22,15 +23,18 @@
     "@angular/router": "^9.0.7",
     "@auth0/angular-jwt": "^4.0.0",
     "@capacitor/core": "1.5.1",
+    "@fullcalendar/core": "^4.4.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.5",
     "@swimlane/ngx-datatable": "^16.0.3",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.2",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "^0.10.3"
